2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* docs/design/Makefile.am:
	  Dist some more design docs.

	* docs/random/moving-plugins:
	  Small addition: good plugins mustn't have functional code
	  within assertion macros.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/draft-framestep.txt:
	Some ideas about a framestep API

	* docs/design/part-element-transform.txt:
	Start design and use cases for basetransform in order to get it
	fixed soon.

2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gsttaglist.h:
	  In GST_TAG_ATTACHEMENT docs, mention that the file name needs to
	  be in UTF-8 encoding.

2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstbus.c:
	  Make it known that gst_bus_poll() is pure evil (fixes #538810).

2008-06-20  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstcapsfilter.c:
	* plugins/elements/gstfakesink.c:
	* plugins/elements/gstfakesrc.c:
	* plugins/elements/gstfdsink.c:
	* plugins/elements/gstfdsrc.c:
	* plugins/elements/gstfilesink.c:
	* plugins/elements/gstfilesrc.c:
	* plugins/elements/gstidentity.c:
	* plugins/elements/gstmultiqueue.c:
	* plugins/elements/gstqueue.c:
	* plugins/elements/gsttee.c:
	* plugins/elements/gsttypefindelement.c:
	  Remove short_description. Add basic docs for gsttypefindelement.
	  Simplify markup for fakesrc/fdsrc.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* plugins/elements/gstfdsrc.c: (gst_fd_src_class_init):
	Added Since doc.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: joel larsson <tilljoel at gmail dot com>

	* docs/plugins/gstreamer-plugins.args:
	* plugins/elements/gstfdsrc.c: (gst_fd_src_class_init),
	(gst_fd_src_init), (gst_fd_src_update_fd),
	(gst_fd_src_set_property), (gst_fd_src_get_property),
	(gst_fd_src_create):
	* plugins/elements/gstfdsrc.h:
	Add timeout property like udpsrc. Fixes #538628.
	Add some more docs and example pipelines.
