@@ -1,3 +1,9 @@
+2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* libs/gst/base/gsttypefindhelper.c: (helper_find_peek):
+	Increase code readability.
+	Don't try to compare buffer offsets when ther are invalid.
+
 2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* docs/design/Makefile.am:
